--- a/earts/templates/Change_pass.html
+++ b/earts/templates/Change_pass.html
@@ -1,31 +1,164 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
+  <!-- Design by foolishdeveloper.com -->
+    <title>Login To E-arts</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
+    <style media="screen">
+      *,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: #190004;
+}
+.background{
+    width: 430px;
+    height: 520px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+}
+.background .shape{
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    border-radius: 60%;
+}
+.shape:first-child{
+    background: linear-gradient(
+        to left,
+        #0b132b,
+        #0b132b
+    );
+    left: -80px;
+    top: -80px;
+}
+.shape:last-child{
+    background: linear-gradient(
+        to right,
+        #ffffff,
+        #e3e7ea
+    );
+    right: -30px;
+    bottom: -80px;
+}
+form{
+    height: 620px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(19, 18, 38, 0.6);
+    padding: 50px 35px;
+}
+form *{
+    font-family: 'Poppins',sans-serif;
+    color: #ffffff;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
+}
+form h3{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+}
+
+label{
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+}
+input{
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: rgba(255,255,255,0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+}
+::placeholder{
+    color: #e5e5e5;
+}
+button{
+    margin-top: 50px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.social{
+  margin-top: 30px;
+  display: flex;
+}
+.social div{
+  background: red;
+  width: 150px;
+  border-radius: 3px;
+  padding: 5px 10px 10px 5px;
+  background-color: rgba(255,255,255,0.27);
+  color: #eaf0fb;
+  text-align: center;
+}
+.social div:hover{
+  background-color: rgba(255,255,255,0.47);
+}
+.social .fb{
+  margin-left: 25px;
+}
+.social i{
+  margin-right: 4px;
+}
+
+    </style>
 </head>
 
-<body>
-<form id="form1" name="form1" method="post" action="/earts/changepasswordpost/">
 
-  <table width="200" border="1" align="center">
-    <tr>
-      <th scope="col">Current&nbsp;Password</th>
-      <th scope="col"><input type="text" name="textfield"/></th>
-    </tr>
-    <tr>
-      <th>New&nbsp;Password</th>
-      <td><input type="text" name="textfield1"/></td>
-    </tr>
-    <tr>
-      <th>Confirm&nbsp;Password</td>
-      <td><input type="text" name="textfield2"/></td>
-    </tr>
-    <tr>
-      <td colspan="2"><input type="submit" value="Submit"/></td>
-    </tr>
-  </table>
+
+<body>
+   <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div>
+
+<form  method="post" action="/earts/changepasswordpost/">
+
+    <h3>Change Password Here</h3>
+
+      <label for="username">Current&nbsp;Password</label>
+      <input name="textfield" type="text" />
+      <label for="username">New&nbsp;Password</label>
+      <input name="textfield1" type="text" />
+
+      <label for="password">Confirm&nbsp;Password</label>
+      <input type="password" name="textfield2" /></label>
+
+    <button type="submit">Save</button>
 
 </form>
 </body>
 </html>
+
