--- a/earts/templates/admintemplates/admin_add_Event.html
+++ b/earts/templates/admintemplates/admin_add_Event.html
@@ -5,6 +5,9 @@
 <div class="main-container">
 <div class="card-box pd-20 height-100-p mb-30">
 <form action="/earts/admin_addeventpost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
+<div class="pd-20">
+						<h4 class="text-blue h4">Add Event</h4>
+					</div>
   <div class="form-group row">
 		<label class="col-sm-12 col-md-2 col-form-label">Event&nbsp;Name</label>
 		<div class="col-sm-12 col-md-10">
@@ -20,7 +23,7 @@
   <div class="form-group row">
 		<label class="col-sm-12 col-md-2 col-form-label">Event Discription</label>
 		<div class="col-sm-12 col-md-10">
-			<input class="form-control" type="text" placeholder="Enter Discriptions" name="textfield2">
+			<input class="form-control" type="textarea" placeholder="Enter Discriptions" name="textfield2">
 		</div>
   </div>
   <div align="center">
