--- a/earts/templates/landingpage.html
+++ b/earts/templates/landingpage.html
@@ -81,7 +81,7 @@
                         <ul class="footer-group">
                             <li><a href="/earts/loginload/">Log In</a></li>
                         </ul>
-                        <p>Copyright © 2015 <a href="#">E-arts</a><br>
+                        <p>Copyright © 2015 <a href="">E-arts</a><br>
                     </div>
                 </div>
                 <div class="social-share">
