--- a/earts/templates/login.html
+++ b/earts/templates/login.html
@@ -17,7 +17,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #000000;
+    background-color: #190004;
 }
 .background{
     width: 430px;
@@ -36,8 +36,8 @@ body{
 .shape:first-child{
     background: linear-gradient(
         to left,
-        #0014ff,
-        #f60018
+        #0b132b,
+        #0b132b
     );
     left: -80px;
     top: -80px;
@@ -45,8 +45,8 @@ body{
 .shape:last-child{
     background: linear-gradient(
         to right,
-        #15ff00,
-        #00e4f0
+        #ffffff,
+        #e3e7ea
     );
     right: -30px;
     bottom: -80px;
@@ -62,7 +62,7 @@ form{
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255,0.1);
-    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    box-shadow: 0 0 40px rgba(19, 18, 38, 0.6);
     padding: 50px 35px;
 }
 form *{
@@ -145,6 +145,7 @@ button{
     </div>
 
 <form  method="post" action="/earts/loginpost/">
+
     <h3>Login Here</h3>
 
       <label for="username">Username</label>
