--- a/earts/templates/participants_studentstemplates/student_view_perfomance.html
+++ b/earts/templates/participants_studentstemplates/student_view_perfomance.html
@@ -1,67 +1,88 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'participants_studentstemplates/student_home.html' %}
+{% block body %}
+    {% load static %}
+	<div class="mobile-menu-overlay"></div>
 
-<body><form action="/earts/student_uploadprogramsload/" method="post">  <table width="407" border="1">
-{% if perfomance.file_type == 'Image' %}
-  <tr>
-    <th width="173">Program&nbsp;Name</td>
-    <td width="218">{{ perfomance.PROGRAMS.program_name}}</td>
-  </tr>
-    <tr>
-    <th width="173">Participant&nbsp;Name</td>
-    <td width="218">{{ perfomance.PARTICIPANTS.STUDENT.student_name}}</td>
-  </tr>
-    <th width="173">Perfomance&nbsp;Name</th>
-    <td width="218">{{ perfomance.performance_name }}</td>
-  </tr>
-  <tr>
-    <td  colspan="2"><img src="{{ perfomance.uploaded_files }}" width="200" height="150" ></td>
-    </tr>
-	 <tr>
-    <td  colspan="2"><button name="back" type="submit">Back</button></td>
-    </tr>{% elif perfomance.file_type == "Video" %}
-      <tr>
-    <th width="173">Program&nbsp;Name</td>
-    <td width="218">{{ perfomance.PROGRAMS.program_name}}</td>
-  </tr>
-    <tr>
-    <th width="173">Participant&nbsp;Name</td>
-    <td width="218">{{ perfomance.PARTICIPANTS.STUDENT.student_name}}</td>
-  </tr>
-    <th width="173">Perfomance&nbsp;Name</th>
-    <td width="218">{{ perfomance.performance_name }}</td>
-  </tr>
-  <tr>
-    <td  colspan="2"> <video height="415" controls autoplay src="{{ perfomance.uploaded_files }}" frameborder="0"  allowfullscreen=""></video>
-</td>
-    </tr>
-	 <tr>
-    <td  colspan="2"><button name="back" type="submit">Back</button></td>
-    </tr>
-          </tr>{% else %}
-      <tr>
-    <th width="173">Program&nbsp;Name</td>
-    <td width="218">{{ perfomance.PROGRAMS.program_name}}</td>
-  </tr>
-    <tr>
-    <th width="173">Participant&nbsp;Name</td>
-    <td width="218">{{ perfomance.PARTICIPANTS.STUDENT.student_name}}</td>
-  </tr>
-    <th width="173">Perfomance&nbsp;Name</th>
-    <td width="218">{{ perfomance.performance_name }}</td>
-  </tr>
-  <tr>
-    <td  colspan="2"> <audio height="415" controls autoplay src="{{ perfomance.uploaded_files }}" frameborder="0"  allowfullscreen=""></audio>
-</td>
-    </tr>
-	 <tr>
-    <td  colspan="2"><button name="back" type="submit">Back</button></td>
-    </tr>{% endif %}
-</table>
-</form>
-</body>
-</html>
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-600px">
+                <!-- Simple Datatable start -->
+				<div class="card-box mb-30">
+					<div class="pd-10">
+						<h2 class="text-blue h2">Performance View</h2>
+					</div>
+{#					<div class="col-lg-4 col-md-6 col-sm-12 mb-30">#}
+                        {% if viewdata.file_type == "Video" %}
+						<div class="pd-20 card-box height-100-p">
+                           <div class="clearfix mb-20">
+						      <div class="pull-left">
+							    <h4 class="text-blue h4">{{ viewdata.PROGRAMS.program_name }}</h4>
+							    <h6 class="text-blue h6">{{ viewdata.performance_name }}</h6>
+							    <p class="font-14 ml-0">By,<br>{{ viewdata.PARTICIPANTS.STUDENT.student_name }} </p>
+						      </div>
+					        </div>
+					        <div class="container">
+						      <video poster="" controls crossorigin>
+						     	<source src="{{ viewdata.uploaded_files }}" type="video/mp4">
+						    	<source src="{{ viewdata.uploaded_files }}" type="video/webm">
+						      </video>
+					        </div>
+				           </div>
+                        {% elif viewdata.file_type == 'Image' %}
+						<div class="pd-20 card-box height-100-p">
+                        <div class="clearfix mb-20">
+						      <div class="pull-left">
+							    <h4 class="text-blue h4">{{ viewdata.PROGRAMS.program_name }}</h4>
+							    <h6 class="text-blue h6">{{ viewdata.performance_name }}</h6>
+							    <p class="font-14 ml-0">By,<br>{{ viewdata.PARTICIPANTS.STUDENT.student_name }} </p>
+						      </div>
+					        </div>
+								<div class="da-card-photo">
+									<img src="{{ viewdata.uploaded_files }}"  class="img-fluid.max-width:100%; min-height-200px" alt="">
+									<div class="da-overlay">
+										<div class="da-social">
+											<ul class="clearfix">
+
+											</ul>
+										</div>
+									</div>
+								</div>
+						</div>
+                        {% else %}
+						<div class="pd-20 card-box height-100-p">
+					        <div class="clearfix mb-20">
+						      <div class="pull-left">
+							    <h4 class="text-blue h4">{{ viewdata.PROGRAMS.program_name }}</h4>
+							    <h6 class="text-blue h6">{{ viewdata.performance_name }}</h6>
+							    <p class="font-14 ml-0">By,<br>{{ viewdata.PARTICIPANTS.STUDENT.student_name }} </p>
+						      </div>
+					        </div>
+					        <div class="container">
+						      <audio controls>
+						      	<source src="{{ viewdata.uploaded_files }}" type="audio/mp3">
+						     	<source src="{{ viewdata.uploaded_files }}" type="audio/ogg">
+						      </audio>
+					        </div>
+				           </div>
+                        {% endif %}
+{#					</div>#}
+				</div>
+
+				<!-- Export Datatable End -->
+			</div>
+		</div>
+	</div>
+    <script src="{% static 'desk/vendors/scripts/core.jsv"' %}"></script>
+	<script src="{% static 'desk/vendors/scripts/script.min.jsv' %}"></script>
+	<script src="{% static 'desk/vendors/scripts/process.js' %}"></script>
+	<script src="{% static 'desk/vendors/scripts/layout-settings.js' %}"></script>
+	<script src="{% static 'desk/src/plugins/plyr/dist/plyr.js' %}"></script>
+	<script src="{% static 'desk/https://cdn.shr.one/1.0.1/shr.js' %}"></script>
+	<script>
+		plyr.setup({
+			tooltips: {
+				controls: !0
+			},
+		});
+	</script>
+{% endblock %}
