--- a/earts/templates/programcommitteetemplates/procommittee_home.html
+++ b/earts/templates/programcommitteetemplates/procommittee_home.html
@@ -40,6 +40,9 @@
         <td>
             <a href="/earts/procommittee_viewprogramsload/{{ i.EVENTS.id }}">View Programs</a></td>
         </td>
+        <td>
+            <a href="/earts/procommittee_addprogramsload/{{ i.EVENTS.id }}">Add Programs</a></td>
+        </td>
         </tr>
     {% endfor %}
 </table>
