--- a/earts/templates/programcommitteetemplates/procommittee_view_perfomance.html
+++ b/earts/templates/programcommitteetemplates/procommittee_view_perfomance.html
@@ -1,33 +1,67 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'programcommitteetemplates/procommittee_home1.html' %}
+{% block body %}
+	<div class="mobile-menu-overlay"></div>
 
-<body><table>
-  <tr>
-    <th colspan="2">Programs </th>
-    <th colspan="2">Program&nbsp;name:&nbsp; <input name="textfield" type="text" /> </th>
-    <td colspan="3"><label>
-      <input type="submit" name="search" value="Search" />
-    </label></td>
-  </tr>
-  <tr>
-    <th>#</th>
-    <th>Program&nbsp;Name </th><th>Participants Name</th><th>Perfomance Name </th><th>Total score</th><th>&nbsp;</th>
-          </tr>
-    {% for i in perfomancedata  %}
-  <tr>
-      <td>{{ forloop.counter }}</td>
-      <td>{{ i.program_name }}&nbsp;</td>
-      <td>{{ i.ss }}</td>
-      <td>{{ i.p }} </td><td>{{ i.sc }}</td>
-      <td><a href="/earts/procommittee_viewperfomance2/{{ i.id }}">View</a></td>
-  </tr>
-    {% endfor %}
-   </table>
-    <button><a href="/earts/procommittee_saveresults/" >Save&nbsp;Result</a></button>
-    <button><a href="/earts/procommittee_publishresult/" >Publish&nbsp;Result</a></button>
-</body>
-</html>
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+                <div class="row">
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Perfomances Table</h4>
+{#                    <form action="/earts/sadmin_viewperfomance1/" method="post"><table width="362" border="1">#}
+{#                            <div class="pd-10">#}
+{#					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="center">#}
+{#					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="right">#}
+{##}
+{#                           <h6 class="text-blue h6">Search Perfomance:</h6>#}
+{#                             <input type="search" class="form-control form-control-sm" name="textfield" placeholder="Search" aria-controls="DataTables_Table_0">#}
+{#                              <button type="submit" class="btn btn-outline-primary">Search</button></div>#}
+{#                                                    </div></form>#}
+						<table class="data-table table stripe hover nowrap" style="width:1200px">
+							<thead>
+								<tr>
+                                  <th >Sl.no</th>
+                                    <th>Program&nbsp;Name</td>
+                                    <th>Participant&nbsp;Name</th>
+                                    <th>Perfomance Name </th>
+                                    <th>Total Score</th>
+                                    <th>Action</th>
+                                </tr>
+							</thead> {% for i in perfomancedata %}
+							<tbody>
+								<tr>
+									<td>{{ forloop.counter }}</td>
+                                    <td>{{ i.program_name }}</td>
+                                    <td>{{ i.ss}}</td>
+                                    <td>{{ i.p }} </td>
+                                    <td>{{ i.sc }} </td>
+                                    <td>
+										<div class="dropdown">
+											<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+												<i class="dw dw-more"></i>
+											</a>
+											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+												<a class="dropdown-item" href="/earts/procommittee_viewperfomance2/{{ i.id }}"><i class="dw dw-view"></i>View</a>
+												<a class="dropdown-item" href="/earts/procommittee_viewresult/{{ i.pid }}"><i class="dw dw-position"></i>View Result</a>
+											</div>
+										</div>
+									</td>
+
+                                 </tr>
+
+							</tbody> {% endfor %}
+						</table>
+					</div>
+                <div align="center" class="pd-20">
+                <a class="btn btn-outline-danger" href="/earts/procommittee_saveresults/">Save Result</a>
+                <a class="btn btn-outline-warning" href="/earts/procommittee_publishresult/">Publish Result</a>
+                </div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+    </div>
+
+{% endblock %}
