--- a/earts/templates/subadmintemplates/sadmin_edit_programcommittee.html
+++ b/earts/templates/subadmintemplates/sadmin_edit_programcommittee.html
@@ -1,45 +1,43 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'admintemplates/index.html' %}
 
-<body>
-<form id="form1" name="form1" method="post" action="/earts/sadmin_editprogramcommitteepost/">
+
+{% block body %}
+<div class="main-container">
+<div class="card-box pd-20 height-100-p mb-30">
+<form action="/earts/sadmin_editprogramcommitteepost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
+<div class="pd-20">
+						<h4 class="text-blue h4">Edit Program Committee</h4>
+					</div>
 <input type="hidden" name="programcid" value="{{ programcid.id }}"/>
-  <table width="200" border="1">
-    <tr>
-      <td>Staff</td>
-      <td><label>
-     <select name="select">
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Staff</label>
+									<div class="col-sm-12 col-md-10">
+									<select class="selectpicker form-control" data-style="btn-outline-primary" data-size="5" name="select">
+
           <option value="{{ programcid.STAFF.id }}"> {{ programcid.STAFF.st_name }}</option>
             {% for i in staffdata %}
           <option value="{{ i.id }}">{{ i.st_name }}</option>
             {% endfor %}
 
         </select>
-      </label></td>
-    </tr>
-    <tr>
-      <td>Event</td>
-      <td><label>
-      <select name="select2">
-                <option value="{{ programcid.EVENTS.id }}"> {{ programcid.EVENTS.event_name }}</option>
+                                    </div></div>
+               <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Event</label>
+									<div class="col-sm-12 col-md-10">
+									<select class="selectpicker form-control" data-style="btn-outline-primary" data-size="5" name="select2">
+            <option value="{{ programcid.EVENTS.id }}"> {{ programcid.EVENTS.event_name }}</option>
             {% for i in eventdata %}
-          <option value="{{ i.id }}">{{ i.event_name }}</option>
+          <option value=    "{{ i.id }}">{{ i.event_name }}</option>
             {% endfor %}
 
-        </select>
-      </label></td>
-    </tr>
-    <tr>
-      <td colspan="2"><label>
-        <input type="submit" name="Submit" value="Save" />
-      </label></td>
-    </tr>
-  </table>
-</form>
 
-</body>
-</html>
+        </select>
+									</div>
+								</div>
+    <div align="center">
+       <button type="submit" class="btn btn-outline-primary">Submit</button>
+
+  </div>
+</form>
+</div></div>
+{% endblock %}
