--- a/earts/templates/admintemplates/admin_add_SubAdmin.html
+++ b/earts/templates/admintemplates/admin_add_SubAdmin.html
@@ -5,6 +5,9 @@
 <div class="main-container">
 <div class="card-box pd-20 height-100-p mb-30">
 <form action="/earts/admin_addsubadminpost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
+<div class="pd-20">
+						<h4 class="text-blue h4">Add Sub Admin</h4>
+					</div>
   <div class="form-group row">
 		<label class="col-sm-12 col-md-2 col-form-label">SubAdmin&nbsp;Name</label>
 		<div class="col-sm-12 col-md-10">
@@ -14,12 +17,12 @@
   <div class="form-group row">
 	    <label class="col-sm-12 col-md-2 col-form-label">Gender</label>
       <div class="custom-control custom-radio mb-6">
-					<input type="radio" id="customRadio4" name="r1" class="custom-control-input">
+					<input type="radio" id="customRadio4" name="r1" value="male" class="custom-control-input">
 					<label class="custom-control-label" for="customRadio4">Male</label>
       </div>
 
       <div class="custom-control custom-radio mb-6">
-					<input type="radio" id="customRadio5" name="r1" class="custom-control-input">
+					<input type="radio" id="customRadio5" name="r1" value="female" class="custom-control-input">
 					<label class="custom-control-label" for="customRadio5">Female</label>
       </div>
   </div>
