--- a/earts/templates/admintemplates/admin_edit_Student.html
+++ b/earts/templates/admintemplates/admin_edit_Student.html
@@ -1,93 +1,95 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'admintemplates/index.html' %}
 
-<body>
+
+{% block body %}
+<div class="main-container">
+<div class="card-box pd-20 height-100-p mb-30">
 <form action="/earts/admin_editstudentpost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
- <input type="hidden" name="stid" value="{{ st.id }}"/>
-  <table width="200" border="1">
-    <tr>
-      <td scope="col"><div align="left">Student&nbsp;Name </div></td>
-      <td scope="col"><label>
-        <input type="text" name="textfield" value="{{ st.student_name }}"/>
-      </label></td>
-    </tr>
-    <tr>
-      <td>Gender</td>
-       {% if st.gender == 'male' %}
-      <td><label>
-        <input name="radiobutton" type="radio" value="male" checked="checked" />
-        Male 
-        <input name="radiobutton" type="radio" value="female" />
-      Female</label></td>
-        {% endif %}
-
-     {% if st.gender == 'female' %}
-      <td><label>
-        <input name="radiobutton" type="radio" value="male" />
-        Male
-        <input name="radiobutton" type="radio" value="female" checked="checked"/>
-      Female</label></td>
-        {% endif %}
-    </tr>
-    <tr>
-      <td>Place</td>
-      <td><label>
-        <input type="text" name="textfield1" value="{{ st.place }}"/>
-      </label></td>
-    </tr>
-    <tr>
-      <td>PIN</td>
-      <td><label>
-        <input type="text" name="textfield2" value="{{ st.pin }}"/>
-      </label></td>
-    </tr>
-      <tr>
-      <td>Post</td>
-      <td><label>
-        <input type="text" name="textfield3" value="{{ st.post }}"/>
-      </label></td>
-    </tr>
-    <tr>
-      <td>District</td>
-      <td><label>
-        <input type="text" name="textfield4" value="{{ st.district }}"/>
-      </label></td>
-    </tr>
-    <tr>
-      <td>Image</td>
-      <td><label>
-        <input type="file" name="file" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>Email</td>
-      <td><label>
-        <input type="text" name="textfield5" value="{{ st.email }}" />
-      </label></td>
-    </tr
-    <tr>
-      <td>Course&nbsp;Name </td>
-      <td>
-          <select name="select">
-          <option value="{{ st.COURSE.id }}"> {{ st.COURSE.course_name }}</option>
+<input type="hidden" name="stid" value="{{ st.id }}"/>
+<div class="pd-20">
+						<h4 class="text-blue h4">Add Student</h4>
+					</div>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">SubAdmin&nbsp;Name</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Name" value="{{ st.student_name }}" name="textfield">
+		</div>
+  </div>
+  <div class="form-group row">
+	    <label class="col-sm-12 col-md-2 col-form-label">Gender</label>
+	    {% if st.gender == 'male' %}
+      <div class="custom-control custom-radio mb-6">
+      					<input type="radio" id="customRadio4" name="radiobutton" value="male" class="custom-control-input" checked="checked">
+					<label class="custom-control-label" for="customRadio4">Male</label>
+      </div>
+      <div class="custom-control custom-radio mb-6">
+					<input type="radio" id="customRadio5" name="radiobutton" value="female"  class="custom-control-input">
+					<label class="custom-control-label" for="customRadio5">Female</label>
+	  	   </div>{% endif %}
+	   {% if st.gender == 'female' %}
+      <div class="custom-control custom-radio mb-6">
+      					<input type="radio" id="customRadio4" name="radiobutton" value="male" class="custom-control-input">
+					<label class="custom-control-label" for="customRadio4">Male</label>
+      </div>
+      <div class="custom-control custom-radio mb-6">
+					<input type="radio" id="customRadio5" name="radiobutton" class="custom-control-input" value="female"checked="checked">
+					<label class="custom-control-label" for="customRadio5">Female</label>
+	  </div>
+	   {% endif %}</div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Place</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Place" value="{{ st.place }}" name="textfield1">
+		</div>
+  </div>
+     <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">PIN</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="number" placeholder="Enter PIN" value="{{ st.pin }}" name="textfield2">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Post</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Post" value="{{ st.post }}"name="textfield3">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">District</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter District" value="{{ st.district }}" name="textfield4">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Image</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="file" name="file">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Email</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="email" placeholder="Enter Email Address" value="{{ st.email }}" name="textfield5">
+		</div>
+  </div>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Qualification</label>
+									<div class="col-sm-12 col-md-10">
+									<select class="selectpicker form-control" data-style="btn-outline-primary" data-size="5" name="select">
+									<option value="{{ st.COURSE.id }}"> {{ st.COURSE.course_name }}</option>
             {% for i in cr %}
           <option value="{{ i.id }}">{{ i.course_name }}</option>
             {% endfor %}
 
         </select>
+				</div>
+			</div>
+    <div align="center">
+              <button onclick="window.history.back()" class="btn btn-outline-primary">Back</button>
 
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2"><label>
-        <input type="submit" name="Submit" value="Save" />
-      </label></td>
-    </tr>
-  </table>
+       <button type="submit" class="btn btn-outline-primary">Save</button>
+
+  </div>
 </form>
-</body>
-</html>
+</div></div>
+{% endblock %}
