--- a/earts/templates/admintemplates/admin_edit_Subadmin.html
+++ b/earts/templates/admintemplates/admin_edit_Subadmin.html
@@ -1,83 +1,82 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'admintemplates/index.html' %}
 
-<body>
+
+{% block body %}
+<div class="main-container">
+<div class="card-box pd-20 height-100-p mb-30">
 <form action="/earts/admin_editsubadminpost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
-    <input type="hidden" name="sbid" value="{{ s.id }}"/>
-  <table width="200" border="1">
-    <tr>
-      <th scope="col"><div align="left">Subadmin&nbsp;Name </div></th>
-      <td scope="col"><label>
-        <input type="text" name="textfield" value="{{ s.subadmin_name}}" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>Gender</td>
+<input type="hidden" name="sbid" value="{{ s.id }}"/>
+<div class="pd-20">
+						<h4 class="text-blue h4">Add Sub Admin</h4>
+					</div>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">SubAdmin&nbsp;Name</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" value="{{ s.subadmin_name}}" placeholder="Enter Name" name="textfield">
+		</div>
+  </div>
+  <div class="form-group row">
+	    <label class="col-sm-12 col-md-2 col-form-label">Gender</label>
+	    {% if s.gender == 'male' %}
+      <div class="custom-control custom-radio mb-6">
+      					<input type="radio" id="customRadio4" name="r1" value="male" class="custom-control-input" checked="checked">
+					<label class="custom-control-label" for="customRadio4">Male</label>
+      </div>
+      <div class="custom-control custom-radio mb-6">
+					<input type="radio" id="customRadio5" name="r1" value="female"  class="custom-control-input">
+					<label class="custom-control-label" for="customRadio5">Female</label>
+	  	   </div>{% endif %}
+	   {% if s.gender == 'female' %}
+      <div class="custom-control custom-radio mb-6">
+      					<input type="radio" id="customRadio4" name="r1" value="male" class="custom-control-input">
+					<label class="custom-control-label" for="customRadio4">Male</label>
+      </div>
+      <div class="custom-control custom-radio mb-6">
+					<input type="radio" id="customRadio5" name="r1" class="custom-control-input" value="female"checked="checked">
+					<label class="custom-control-label" for="customRadio5">Female</label>
+	  </div>
+	   {% endif %}</div>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Place</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" value="{{ s.place }}" placeholder="Enter Place" name="textfield1">
+		</div>
+  </div>
+     <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">PIN</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="number" placeholder="Enter PIN" value="{{ s.pin }}" name="textfield2">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Post</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Post" value="{{ s.post }}" name="textfield3">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">District</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter District" value="{{ s.district }}" name="textfield4">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Image</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="file"  name="file">
+		</div>
+  </div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Email</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="email" placeholder="Enter Email Address" value="{{ s.email }}" name="textfield5">
+		</div>
+  </div>
+    <div align="center">
+       <button onclick="window.history.back()" class="btn btn-outline-primary">Back</button>
+       <button type="submit" class="btn btn-outline-primary">Save</button>
 
-
-          {% if s.gender == 'male' %}
-               <td>
-        <input name="r1" type="radio" value="male" checked="checked" />
-        Male
-        <input name="r1" type="radio" value="female"/>
-      Female</td>
-        {% endif %}
-
-{% if s.gender == 'Female' %}
-     <td>
-        <input name="r1" type="radio" value="male" />
-        Male
-        <input name="r1" type="radio" value="female" checked="checked" />
-      Female</td>
-        {% endif %}
-
-    </tr>
-    <tr>
-      <td>Place</td>
-      <td><label>
-        <input type="text" name="textfield1"  value="{{ s.place }}"/>
-      </label></td>
-    </tr>
-    <tr>
-      <td>PIN</td>
-      <td><label>
-        <input type="text" name="textfield2" value="{{ s.pin }}"/>
-      </label></td>
-    </tr>
-    <tr>
-      <td>Post</td>
-      <td><label>
-        <input type="text" name="textfield3" value="{{ s.post }}" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>District</td>
-      <td><label>
-        <input type="text" name="textfield4" value="{{ s.district}}"/>
-      </label></td>
-    </tr>
-    <tr>
-      <td>Image</td>
-      <td><label>
-        <input type="file" name="file" />
-      </label></td>
-    </tr>
-    <tr>
-      <td>Email</td>
-      <td><label>
-        <input type="text" name="textfield5" value="{{ s.email }}" />
-      </label></td>
-    </tr>
-    <tr>
-      <td colspan="2">
-        <input type="submit" name="Submit" value="Save" />
-      </td>
-    </tr>
-  </table>
+  </div>
 </form>
-</body>
-</html>
+</div></div>
+{% endblock %}
