--- a/earts/templates/admintemplates/admin_view_Course.html
+++ b/earts/templates/admintemplates/admin_view_Course.html
@@ -1,40 +1,57 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'admintemplates/index.html' %}
+{% block body %}
+	<div class="mobile-menu-overlay"></div>
 
-<body>
- <form action="/earts/admin_viewcourseload/" method="post"><table width="316" border="1">
-  <tr>
-    <th colspan="3" scope="col"><p>CourseName&nbsp;
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+                <div class="row">
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Events Table</h4>
+					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="center">
+					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="right">
+                          <label>
+                             <input type="search" class="form-control form-control-sm" placeholder="Search" aria-controls="DataTables_Table_0">
+                          </label>
+                          </div>
+						<table class="data-table table stripe hover nowrap" style="width:1200px">
+							<thead>
+								<tr>
+                                    <th >Sl.no</th>
+                                    <th width="233">Course&nbsp;Name </th>
+                                    <th>Course department</th>
+                                    <th>Action</th>
+                                    </tr>
+							</thead> {% for i in data %}
+							<tbody>
+								<tr>
+									<td>{{ forloop.counter }}</td>
+                                    <td>&nbsp;{{ i.course_name }}</td>
+                                     <td>&nbsp;{{ i.department }}</td>
+                                    <td>
+										<div class="dropdown">
+											<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+												<i class="dw dw-more"></i>
+											</a>
+											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+												<a class="dropdown-item" href="/earts/admin_editcourseload/{{ i.id }}"><i class="dw dw-edit2"></i> Edit</a>
+												<a class="dropdown-item" href="/earts/admin_deletecourse/{{ i.id }}"><i class="dw dw-delete-3"></i> Delete</a>
+											</div>
+										</div>
+									</td>
+								</tr>
 
-        <input type="text" name="textfield" />
-      </th>
-    <th width="93" scope="col">
-    <input type="submit" name="Submit" value="Search" /></th>
-  </tr></table>
-<br/>
-
-  <table width="830" border="1">
-  <tr>
-    <th width="52">#</th>
-    <th width="233">Course&nbsp;Name </th>
-      <th>Course department</th>
-    <td width="43">&nbsp;</td>
-    <td width="39">&nbsp;</td>
-  </tr>
-      {% for i in data %}
-  <tr>
-    <td>{{ forloop.counter }}</td>
-    <td>&nbsp;{{ i.course_name }}</td>
-    <td>&nbsp;{{ i.department }}</td>
-    <td><a href="/earts/admin_editcourseload/{{ i.id }}">Edit</a></td>
-    <td><a href="/earts/admin_deletecourse/{{ i.id }}">Delete</a></td>
-  </tr>
-      {% endfor %}
-</table>
-</form>
-</body>
-</html>
+							</tbody> {% endfor %}
+						</table>
+					</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+    </div>
+    <div class="footer-wrap pd-20 mb-20 card-box">
+                <a href="https://github.com/dropways" target="_blank"></a>
+	</div>
+{% endblock %}
