--- a/earts/templates/admintemplates/admin_view_SubAdmin.html
+++ b/earts/templates/admintemplates/admin_view_SubAdmin.html
@@ -5,12 +5,21 @@
 	<div class="main-container">
 		<div class="pd-ltr-20 xs-pd-20-10">
 			<div class="min-height-200px">
-                <!-- Simple Datatable start -->
-				<div class="card-box mb-30">
+            <div class="row">
+             <div class="card-box mb-30">
 					<div class="pd-20">
-						<h4 class="text-blue h4">Sub Admin Table</h4>
-					</div>
-					<div class="pb-20">
+						<h4 class="text-blue h4">SubAdmin Table</h4>
+                    <form action="/earts/admin_viewsubadminload/" method="post"><table width="362" border="1">
+                            <div class="pd-10">
+                            <h6 class="text-blue h6">Search Events:</h6>
+                            <input type="text" name="textfield" placeholder="Search" />
+                            <button type="submit" class="btn btn-outline-primary">view</button></div></form>
+					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="center">
+					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="right">
+                          <label>
+                             <input type="search" class="form-control form-control-sm" placeholder="Search" aria-controls="DataTables_Table_0">
+                          </label>
+                          </div>
 						<table class="data-table table stripe hover nowrap" style="width:1200px">
 							<thead>
 								<tr>
@@ -43,7 +52,7 @@
 												<i class="dw dw-more"></i>
 											</a>
 											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-												<a class="dropdown-item" href="/earts/admin_editsubadminload/{{ i.id }}"><i class="dw dw-edit2"></i>View Programs</a>
+												<a class="dropdown-item" href="/earts/admin_editsubadminload/{{ i.id }}"><i class="dw dw-edit2"></i>Edit</a>
 												<a class="dropdown-item" href="/earts/admin_deletesubadmin/{{ i.id }}"><i class="dw dw-delete-3"></i> Delete</a>
 											</div>
 										</div>
@@ -54,12 +63,12 @@
 						</table>
 					</div>
 				</div>
-
-				<!-- Export Datatable End -->
-			</div>
-			<div class="footer-wrap pd-20 mb-20 card-box">
-                <a href="https://github.com/dropways" target="_blank"></a>
+				</div>
+				</div>
 			</div>
 		</div>
+    </div>
+    <div class="footer-wrap pd-20 mb-20 card-box">
+                <a href="https://github.com/dropways" target="_blank"></a>
 	</div>
 {% endblock %}
