--- a/earts/templates/admintemplates/admin_view_program_committee.html
+++ b/earts/templates/admintemplates/admin_view_program_committee.html
@@ -1,42 +1,55 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'admintemplates/index.html' %}
+{% block body %}
+	<div class="mobile-menu-overlay"></div>
 
-<body><form action="/earts/admin_viewprogramcommitteeload/" method="post"><table width="362" border="1">
-  <tr>
-    <th width="76" scope="col">Events:</th>
-    <th colspan="2" scope="col">Event&nbsp;name<select name="select2">
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+                <div class="row">
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Progarm Committee Table</h4>
+						<h5 class="text-blue h4">Events:</h5>
+						<form action="/earts/admin_viewprogramcommitteeload/" method="post"><table width="362" border="1">
+						<select class="selectpicker form-control" data-style="btn-outline-primary" data-size="5" name="select2">
+						 <label>Select Event
+                          </label>
             {% for i in event %}
           <option value="{{ i.id }}">{{ i.event_name }}</option>
             {% endfor %}
 
-        </select></th>
-    <th width="82" scope="col">
-      <input type="submit" name="Submit" value="View" /></th>
-    </tr>
-	</table>
-	
-	<br />
-	<table width="361" border="1">
-  <tr>
-    <th width="25">#</th>
-    <th width="106">&nbsp;Staff&nbsp;Name </th>
-    <th width="122">Event&nbsp;Name </th>
-    <th width="80">Date</th>
-    </tr>
+        </select><button type="submit" class="btn btn-primary">view</button></form>
+					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="center">
+					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="right">
+                                                   </div>
+						<table class="data-table table stripe hover nowrap" style="width:1200px">
+							<thead>
+								<tr>
+                                  <th >Sl.no</th>
+                                    <th>Staff Name</th>
+                                    <th>Event&nbsp;Name </td>
+                                    <th>Event&nbsp;date </th>
+                                    </tr>
+							</thead> {% for i in prgmcdata %}
+							<tbody>
+								<tr>
+									<td>{{ forloop.counter }}</td>
+                                   <td>{{ i.STAFF.st_name }}</td>
+                                   <td>{{ i.EVENTS.event_name}}</td>
+                                   <td>{{ i.created_date }}</td>
 
-    {% for i in prgmcdata %}
-  <tr>
-    <td>{{ forloop.counter }}</td>
-    <td>{{ i.STAFF.st_name }}&nbsp;</td>
-      <td>{{ i.EVENTS.event_name}}&nbsp;</td>
-    <td>{{ i.created_date }}</td>
-    </tr>
-        {% endfor %}
-</table>
-</form>
-</body>
-</html>
+								</tr>
+
+							</tbody> {% endfor %}
+						</table>
+					</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+    </div>
+    <div class="footer-wrap pd-20 mb-20 card-box">
+                <a href="https://github.com/dropways" target="_blank"></a>
+	</div>
+{% endblock %}
