--- a/earts/templates/audiencetemplates/public3.html
+++ b/earts/templates/audiencetemplates/public3.html
@@ -17,8 +17,8 @@
                            <div class="pd-20 card-box mb-30">
 					        <div class="clearfix mb-20">
 						      <div class="pull-left">
-							    <h4 class="text-blue h4">Plyr HTML5 Video</h4>
-							    <p class="font-14 ml-0">A simple, accessible HTML5 media player <a href="https://github.com/sampotts/plyr" target="_blank" class="weight-700 text-blue">Click Here</a></p>
+							    <h4 class="text-blue h4">{{ data.performance_name }}</h4>
+							    <p class="font-14 ml-0">By,<br>{{ data.PARTICIPANTS.STUDENT.student_name }} </p>
 						      </div>
 					        </div>
 					        <div class="container">
@@ -34,16 +34,14 @@
                            <div class="pd-20 card-box mb-30">
 					        <div class="clearfix mb-20">
 						      <div class="pull-left">
-							    <h4 class="text-blue h4">Plyr HTML5 Video</h4>
-							    <p class="font-14 ml-0">A simple, accessible HTML5 media player <a href="https://github.com/sampotts/plyr" target="_blank" class="weight-700 text-blue">Click Here</a></p>
+							    <h4 class="text-blue h4">{{ data.performance_name }}</h4>
+							    <p class="font-14 ml-0">By,<br>{{ data.PARTICIPANTS.STUDENT.student_name }} </p>
 						      </div>
 					        </div>
 					        <div class="container">
-						      <video poster="" controls crossorigin>
-						     	<source src="{{ data.uploaded_files }}" type="video/mp4">
-						    	<source src="{{ data.uploaded_files }}" type="video/webm">
-						      </video>
-					        </div>
+						      <img
+						     	 src="{{ data.uploaded_files }}" >
+                            </div>
 				           </div>
 						</div>
                         {% else %}
@@ -51,8 +49,8 @@
                            <div class="pd-20 card-box mb-30">
 					        <div class="clearfix mb-20">
 						      <div class="pull-left">
-							    <h4 class="text-blue h4">Plyr HTML5 Video</h4>
-							    <p class="font-14 ml-0">A simple, accessible HTML5 media player <a href="https://github.com/sampotts/plyr" target="_blank" class="weight-700 text-blue">Click Here</a></p>
+							   <h4 class="text-blue h4">{{ data.performance_name }}</h4>
+							    <p class="font-14 ml-0">By,<br>{{ data.PARTICIPANTS.STUDENT.student_name }} </p>
 						      </div>
 					        </div>
 					        <div class="container">
