--- a/earts/templates/participants_studentstemplates/student_upload_program.html
+++ b/earts/templates/participants_studentstemplates/student_upload_program.html
@@ -1,70 +1,85 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'participants_studentstemplates/student_home.html' %}
 
-<body>
-<form id="form1" name="form1" enctype="multipart/form-data" method="post" action="/earts/student_uploadprogramspost/">
-<table width="200" border="1">
-  <tr>
-    <th>Program&nbsp;Name</th>
-    <td>{{ progobj.program_name }}<input type="hidden" value="{{ praticipationid }}" name="praticipationid"/> <input type="hidden" value="{{ progobj.id }}" name="progobj"/></td>
 
-  </tr>
-   <tr>
-    <th>Perfomance&nbsp;Name</th>
-    <td><input name="text1" type="text"/></td>
-    
-  </tr>
-    <tr>
-    <th>Select File Type</th>
-    <td><select name="select">
-          <option>Image</option>
-          <option>Audio</option>
-          <option>Video</option>
-        </select></td>
-    </tr>
+{% block body %}
+<div class="main-container">
+<div class="card-box pd-20 height-100-p mb-30">
+<form action="/earts/student_uploadprogramspost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
+<div class="pd-20">
+						<h4 class="text-blue h4">Upload Page</h4>
+					</div>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Program&nbsp;Name</label>
+		<div class="col-sm-12 col-md-10">
+			<h6 class="text-light-blue h6">{{ progobj.program_name }}</h6> <input type="hidden" value="{{ praticipationid }}" name="praticipationid"/>
+            <input type="hidden" value="{{ progobj.id }}" name="progobj"/>
+		</div>
+  </div>
 
-  </tr>
-  <tr>
-    <tH>Upload</th>
-    <td>
-      <label>
-        <input type="file" name="file" />
-        </label>
-    
-   </td></tr>
-   <tr>
-    <td colspan="2">
-      
-        <input type="submit" name="Submit" value="Upload" />
-    </td>
-</tr>
-</table>
+  <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Perfomance Name</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control" type="text" placeholder="Enter Perfomance Name" name="text1">
+		</div>
+  </div>
+     <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Select File Type</label>
+									<div class="col-sm-12 col-md-10">
+									<select class="selectpicker form-control" data-style="btn-outline-primary" data-size="5" name="select">
+										<optgroup label="Type" data-max-options="1">
+											<option>Image</option>
+											<option>Audio</option>
+											<option>Video</option>
+										</optgroup>
+									</select>
+									</div>
+								</div>
+    <div class="form-group row">
+		<label class="col-sm-12 col-md-2 col-form-label">Upload File</label>
+		<div class="col-sm-12 col-md-10">
+			<input class="form-control-file btn-danger" type="file"  name="file">
+		</div>
+  </div>
+
+    <div align="center">
+       <button type="submit" class="btn btn-outline-primary">Upload</button>
+
+  </div>
 </form>
-<table width="200" border="1">
-{% for i in perfomanneobj %}
-  <tr>
-    <th>Program&nbsp;Name</th>
-    <td>{{ i.PROGRAMS.program_name }}&nbsp;</td>
-  </tr>
-  <tr>
-    <th>Participant&nbsp;Name</th>
-    <td>{{ i.PARTICIPANTS.STUDENT.student_name }}&nbsp;</td>
-  </tr>
-  <tr>
-    <th>Perfomance&nbsp;Name</th>
-    <td>{{ i.performance_name }}</td>
-  </tr>
-  <tr>
-    <th><a href="/earts/student_viewperfomanceload/{{ i.id }}">View</a></td>
-    <th><a href="/earts/student_deleteperfomance/{{ i.id }}/{{ progobj.id }}/{{ praticipationid }}">Delete</a></td>
-  </tr>
-    {% endfor %}
+    <div class="pd-10">
+    <div class="card-box pd-20 height-auto mb-30">
+    <h4 class="text-blue h4">Your Upload</h4>
+    <table class="data-table table stripe hover nowrap" style="width:1200px">
+							{% for i in perfomanneobj %}
+								<tr>
+                                  <th>Program&nbsp;Name</td>
+                                    <td>{{ i.PROGRAMS.program_name }}&nbsp;</td>
+                                </tr>
+                                <tr>
+                                    <th>Participant&nbsp;Name</th>
+                                    <td>{{ i.PARTICIPANTS.STUDENT.student_name }}&nbsp;</td>
+                                </tr>
+                                <tr>
+                                     <th>Perfomance&nbsp;Name</th>
+                                    <td>{{ i.performance_name }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Action</th>
+                                    <td>
+										<div class="dropdown">
+											<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+												<i class="dw dw-more"></i>
+											</a>
+											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+												<a class="dropdown-item" href="/earts/student_viewperfomanceload/{{ i.id }}"><i class="dw dw-view"></i>View</a>
+												<a class="dropdown-item" href="/earts/student_deleteperfomance/{{ i.id }}/{{ progobj.id }}/{{ praticipationid }}"><i class="dw dw-delete-2      "></i>Delete</a>
+											</div>
+										</div>
+									</td>
 
-</table>
-
-</body>
-</html>
+                                </tr>
+							 {% endfor %}
+						</table>
+    </div></div>
+</div></div>
+{% endblock %}
