--- a/earts/templates/participants_studentstemplates/student_view_Events.html
+++ b/earts/templates/participants_studentstemplates/student_view_Events.html
@@ -1,40 +1,50 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'participants_studentstemplates/student_home.html' %}
+{% block body %}
+	<div class="mobile-menu-overlay"></div>
 
-<body><form action="/earts/student_vieweventsload/" method="post"><table width="316" border="1">
-  <tr>
-    <th colspan="3" scope="col"><p>Event&nbsp;Name&nbsp;
-      
-        <input type="text" name="textfield" />
-      </th>
-    <th width="93" scope="col">
-    <input type="submit" name="Submit" value="Search" /></th>
-  </tr></table>
-<br/>
-  
-  <table width="830" border="1">
-  <tr>
-    <th width="52">#</th>
-    <th width="233">Event&nbsp;Name </th>
-    <th width="92">Event&nbsp;Date </td>
-    <th width="331">Event&nbsp;Discription </th>
-    <td width="43">&nbsp;</td>
-    <td width="39">&nbsp;</td>
-  </tr>
-      {% for i in data %}
-  <tr>
-    <td>{{ forloop.counter }}&nbsp;</td>
-    <td>{{ i.event_name }}&nbsp;</td>
-    <td>{{ i.event_date }}&nbsp;</td>
-    <td>{{ i.event_discription }}&nbsp;</td>
-    <td><a href="/earts/student_viewprogramsload/{{ i.id }}">Programs</a></td>
-  </tr>
-      {% endfor %}
-</table>
-</form>
-</body>
-</html>
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+                <div class="row">
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Events Table</h4>
+                    <form action="/earts/student_vieweventsload/" method="post"><table width="362" border="1">
+                            <div class="pd-10">
+                            <h6 class="text-blue h6">Search Events:</h6>
+                            <input type="search" name="textfield" class="form-control form-control-sm" placeholder="Search" aria-controls="DataTables_Table_0">
+                            <button type="submit" class="btn btn-outline-primary">view</button></div></form>
+  						<table class="data-table table stripe hover nowrap" style="width:1200px">
+							<thead>
+								<tr>
+                                  <th >Sl.no</th>
+                                    <th>Event Name</th>
+                                    <th>Event&nbsp;Date </td>
+                                    <th>Event&nbsp;Discription </th>
+                                    <th>Link</th>
+                                    </tr>
+							</thead> {% for i in data %}
+							<tbody>
+								<tr>
+									<td>{{ forloop.counter }}</td>
+                                    <td>{{ i.event_name }}</td>
+                                    <td>{{ i.event_date }}</td>
+                                    <td>{{ i.event_discription }}</td>
+                                    <td>
+										<div align="center" class="pd-20">
+                                                   <a class="btn btn-outline-danger" href="/earts/student_viewprogramsload/{{ i.id }}">View Programs</a>
+                                         </div>
+									</td>
+								</tr>
+
+							</tbody> {% endfor %}
+						</table>
+					</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+    </div>
+
+{% endblock %}
