--- a/earts/templates/programcommitteetemplates/procommittee_assign_judges.html
+++ b/earts/templates/programcommitteetemplates/procommittee_assign_judges.html
@@ -1,27 +1,29 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'programcommitteetemplates/procommittee_home1.html' %}
 
-<body>
-<form id="form1" name="form1" method="post" action="/earts/procommittee_assignjudgespost/">
 
-  <table width="200" border="1">
-    <tr>
-      <th>Choose Judge</td>
-      <td colspan="2"><select name="select">
-            {% for i in judgesdata %}
+{% block body %}
+<div class="main-container">
+<div class="card-box pd-20 height-100-p mb-30">
+<form action="/earts/procommittee_assignjudgespost/" method="post" enctype="multipart/form-data" name="form1" id="form1">
+<div class="pd-20">
+						<h4 class="text-blue h4">Assign Judges</h4>
+					</div>
+  <div class="form-group row">
+									<div class="col-sm-12 col-md-10">
+                                    <label class="col-sm-12 col-md-2 col-form-label">Judges :</label>
+									<select class="selectpicker " data-style="btn-outline-primary" data-size="5" name="select">
+            {% for i in judgesdata   %}
           <option value="{{ i.id }}">{{ i.judge_name }}</option>
             {% endfor %}
 
-        </select></td>
-    </tr>
-    <tr>
-        <td><button type="submit">Assign</button> </td>
-    </tr>
-  </table>
+        </select>
+									</div>
+								</div>
+
+    <div  class="form-group row"> <div class="pd-ltr-50" > <div class="col-sm-22 col-md-10">
+    <button type="submit" class="btn btn-outline-primary">Add</button></div></div></div>
+
+
 </form>
-</body>
-</html>
+</div></div>
+{% endblock %}
