--- a/earts/templates/programcommitteetemplates/procommittee_view_participants.html
+++ b/earts/templates/programcommitteetemplates/procommittee_view_participants.html
@@ -1,33 +1,61 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>PARTICIPANTS TABLE</title>
-</head>
+{% extends 'programcommitteetemplates/procommittee_home1.html' %}
+{% block body %}
+	<div class="mobile-menu-overlay"></div>
 
-<body>
-<form id="form1" name="form1" method="post" action="">
-  <table width="200" border="1">
-    <tr>
-      <th>Sl.no</td>
-      <th>Program&nbsp;Name</td>
-      <th>Participant&nbsp;Name</td>
-      <th>Status</td>
-      <th>requested&nbsp;Date</td>
-      <th>&nbsp;</td>
-    </tr>
-      {% for i in partic %}
-    <tr>
-      <td>{{ forloop.counter }}</td>
-      <td>{{ i.PROGRAMS.program_name }}</td>
-      <td>{{ i.STUDENT.student_name }}</td>
-      <td>{{ i.status }}</td>
-      <td>{{ i.requested_date }}</td>
-      <td><a href="/earts/procommittee_approveload/{{ i.id }}">Approve</a></td>
-    </tr>
-      {% endfor %}
-  </table>
-</form>
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+                <div class="row">
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Participants Table</h4>
+{#                    <form action="/earts/sadmin_viewparticipants/" method="post"><table width="362" border="1">#}
+{#                            <div class="pd-10">#}
+{#					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="center">#}
+{#					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="right">#}
+{##}
+{#                           <h6 class="text-blue h6">Search Participants :</h6>#}
+{#                             <input type="search" class="form-control form-control-sm" name="textfield" placeholder="Search" aria-controls="DataTables_Table_0">#}
+{#                              <button type="submit" class="btn btn-outline-primary">Search</button></div>#}
+{#                                                    </div></form>#}
+						<table class="data-table table stripe hover nowrap" style="width:1200px">
+							<thead>
+								<tr>
+                                  <th >Sl.no</th>
+                                    <th>Program&nbsp;Name</td>
+                                    <th>Participant&nbsp;Name</td>
+                                    <th>Status</td>
+                                    <th>requested&nbsp;Date</td>
+                                    <th>Action</td
+                                    </tr>
+							</thead> {% for i in partic  %}
+							<tbody>
+								<tr>
+									<td>{{ forloop.counter }}</td>
+                                    <td>{{ i.PROGRAMS.program_name }}</td>
+                                    <td>{{ i.STUDENT.student_name }}</td>
+                                    <td>{{ i.status }}</td>
+                                    <td>{{ i.requested_date }}</td>
+                                    <td>
+										<div class="dropdown">
+											<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+												<i class="dw dw-more"></i>
+											</a>
+											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+												<a class="dropdown-item" href="/earts/procommittee_approveload/{{ i.id }}"><i class="dw dw-tick"></i>Approve</a>
+											</div>
+										</div>
+									</td>
+                                 </tr>
 
-</body>
-</html>
+							</tbody> {% endfor %}
+						</table>
+					</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+    </div>
+
+{% endblock %}
