--- a/earts/templates/subadmintemplates/sadmin_view_events.html
+++ b/earts/templates/subadmintemplates/sadmin_view_events.html
@@ -1,40 +1,62 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Untitled Document</title>
-</head>
+{% extends 'subadmintemplates/subadminhome.html' %}
+{% block body %}
+	<div class="mobile-menu-overlay"></div>
 
-<body><form action="/earts/sadmin_vieweventsload/" method="post"><table width="316" border="1">
-  <tr>
-    <th colspan="3" scope="col"><p>Event&nbsp;Name&nbsp;
-      
-        <input type="text" name="textfield" />
-      </th>
-    <th width="93" scope="col">
-    <input type="submit" name="Submit" value="Search" /></th>
-  </tr></table>
-<br/>
-  
-  <table width="830" border="1">
-  <tr>
-    <th width="52">#</th>
-    <th width="233">Event&nbsp;Name </th>
-    <th width="92">Event&nbsp;Date </td>
-    <th width="331">Event&nbsp;Discription </th>
-    <td width="43">&nbsp;</td>
-    <td width="39">&nbsp;</td>
-  </tr>
-      {% for i in data %}
-  <tr>
-    <td>{{ forloop.counter }}&nbsp;</td>
-    <td>{{ i.event_name }}&nbsp;</td>
-    <td>{{ i.event_date }}&nbsp;</td>
-    <td>{{ i.event_discription }}&nbsp;</td>
-    <td><a href="/earts/sadmin_editeventsload/{{ i.id }}">Edit</a></td>
-    <td><a href="/earts/subadmin_deleteevents/{{ i.id }}">Delete</a></td>
-  </tr>
-      {% endfor %}
-</table>
-</form>
-</body>
-</html>
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+                <div class="row">
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Events Table</h4>
+                    <form action="/earts/sadmin_vieweventsload/" method="post"><table width="362" border="1">
+                            <div class="pd-10">
+                            <h6 class="text-blue h6">Search Events:</h6>
+                            <input type="text" name="textfield" placeholder="Search" />
+                            <button type="submit" class="btn btn-outline-primary">view</button></div></form>
+					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="center">
+					     <div id="DataTables Table_0_filter" class="dataTables_filter" align="right">
+                          <label>
+                             <input type="search" class="form-control form-control-sm" placeholder="Search" aria-controls="DataTables_Table_0">
+                          </label>
+                          </div>
+						<table class="data-table table stripe hover nowrap" style="width:1200px">
+							<thead>
+								<tr>
+                                  <th >Sl.no</th>
+                                    <th>Event Name</th>
+                                    <th>Event&nbsp;Date </td>
+                                    <th>Event&nbsp;Discription </th>
+                                    <th>Action</th>
+                                    </tr>
+							</thead> {% for i in data %}
+							<tbody>
+								<tr>
+									<td>{{ forloop.counter }}</td>
+                                    <td>{{ i.event_name }}</td>
+                                    <td>{{ i.event_date }}</td>
+                                    <td>{{ i.event_discription }}</td>
+                                    <td>
+										<div class="dropdown">
+											<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+												<i class="dw dw-more"></i>
+											</a>
+											<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+												<a class="dropdown-item" href="/earts/sadmin_editeventsload/{{ i.id }}"><i class="dw dw-edit2"></i> Edit</a>
+												<a class="dropdown-item" href="/earts/s admin_deleteevents/{{ i.id }}"><i class="dw dw-delete-3"></i> Delete</a>
+											</div>
+										</div>
+									</td>
+								</tr>
+
+							</tbody> {% endfor %}
+						</table>
+					</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+    </div>
+
+{% endblock %}
